--- a/styles.css
+++ b/styles.css
@@ -97,9 +97,77 @@ body {
 /* Data Container */
 .data-container {
     height: 75vh;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.select-all {
+    height: 30px;
+    width: 30px;
+    background-color: orange;
+}
+
+.col-name-container {
+    height: 30px;
+    width: calc(100vw - 30px);
+    background-color: red;
+}
+
+.row-name-container {
+    height: calc(75vh - 30px);
+    width: 30px;
+    background-color: green;
+}
+
+.input-cell-container {
+    height: calc(75vh - 30px);
+    width: calc(100vw - 30px);
+    background-color: pink;
 }
 
 /* Sheet Bar */
 .sheet-bar {
     height: 4vh;
+    display: flex;
+    align-items: center;
+}
+
+.icon-left-scroll,
+.icon-right-scroll {
+    font-size: 30px;
+}
+
+.icon-left-scroll:hover,
+.icon-right-scroll:hover {
+    background-color: lightgray;
+    cursor: pointer;
+}
+
+.icon-add {
+    color: #017c41;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.icon-add:hover {
+    cursor: pointer;
+    transform: scale(1.1);
+}
+
+.sheet-tab-container {
+    display: flex;
+}
+
+.sheet-tab {
+    border-bottom: 4px solid #017c41;
+    margin-left: 1px;
+    margin-right: 1px;
+    font-size: 18px;
+    font-weight: 600;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.sheet-tab:hover {
+    cursor: default;
 }
