--- a/styles.css
+++ b/styles.css
@@ -129,6 +129,7 @@ body {
     width: calc(100vw - 160px);
     outline-color: #017c41;
 }
+
 /* Data Container */
 .data-container {
     height: 75vh;
@@ -147,6 +148,7 @@ body {
     width: calc(100vw - 30px);
     border: 1px solid lightgray;
     display: flex;
+    overflow: hidden;
 }
 
 .col-name{
@@ -177,6 +179,7 @@ body {
     height: calc(75vh - 30px);
     width: calc(100vw - 30px);
     border: 1px solid lightgray;
+    overflow: scroll;
 }
 
 .cell-row{
@@ -193,6 +196,23 @@ body {
 
 .input-cell.selected{
     border: 2px solid #017c41;
+}
+
+.input-cell.top-cell-selected{
+    border-top: none;
+}
+
+/* This is the border initially given to an unselected cell */
+.input-cell.right-cell-selected{
+    border-right: 1px solid lightgray;
+}
+
+.input-cell.bottom-cell-selected{
+    border-bottom: 1px solid lightgray;
+}
+
+.input-cell.left-cell-selected{
+    border-left: none;
 }
 
 /* Sheet Bar */
