--- a/styles.css
+++ b/styles.css
@@ -123,8 +123,7 @@ body {
     height: 70%;
     border: 1px solid lightgray;
     background-color: #fff;
-    padding-left: 0.7rem;
-    padding-right: 0.7rem;
+    font-size: 100%;
     display: flex;
     align-items: center;
 }
@@ -232,7 +231,7 @@ body {
     border-top: none;
 }
 
-/* This is the border initially given to an unselected cell */
+/* 1px solid lightgray is the border initially given to an unselected cell */
 .input-cell.right-cell-selected{
     border-right: 1px solid lightgray;
 }
