--- a/register.css
+++ b/register.css
@@ -47,12 +47,13 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* justify-content: center; */
 }
 
 /* Sign In Heading */
 .sign-in-to-continue{
     color: #68B62B;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
 }
 
 /* Input Fields */
@@ -63,7 +64,6 @@ body {
     padding: 10px;
     border: 1px solid #999;
     border-radius: 20px;
-    outline-color: #68B62B;
 }
 
 hr {
@@ -76,6 +76,8 @@ hr {
     width: 30px;
     margin: -19px auto 10px;
     text-align: center;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
 }
 
 /* Sign In Buttons */
@@ -96,6 +98,8 @@ hr {
 .signin-btn{
     color: #fff;
     background-color: #68B62B;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
 }
 
 .google-btn{
@@ -109,4 +113,6 @@ hr {
 
 .continue-with-google{
     margin: 0px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
 }
