Removing extra libraries, serving pages

--- a/src/assets/pages/dashboard.pug
+++ b/src/assets/pages/dashboard.pug
@@ -6,13 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Excel Clone</title>
-    <link rel="stylesheet" href="../css/dashboard.css">
+    <link rel="stylesheet" href="dashboard.css">
     <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="../public/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../public/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../public/favicon-16x16.png">
-    <link rel="manifest" href="../public/site.webmanifest">
-    <link rel="mask-icon" href="../public/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="manifest" href="site.webmanifest">
+    <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 </head>
@@ -21,7 +21,7 @@
     <div class="container">
         <div class="navbar">
             <div class="project-logo">
-                <img src="../public/logo.png" alt="">
+                <img src="logo.png" alt="">
             </div>
             <div class="project-title-container">
                 <span class="project-title">Excel</span>
@@ -40,7 +40,7 @@
                 <div class="list-item-container">
                     <div class="list-item">
                         <div class="li-logo">
-                            <img src="../public/logo.png" alt="">
+                            <img src="logo.png" alt="">
                         </div>
 
                         <div class="li-book-name">
@@ -55,7 +55,7 @@
                 <div class="list-item-container">
                     <div class="list-item">
                         <div class="li-logo">
-                            <img src="../public/logo.png" alt="">
+                            <img src="logo.png" alt="">
                         </div>
 
                         <div class="li-book-name">
@@ -70,7 +70,7 @@
                 <div class="list-item-container">
                     <div class="list-item">
                         <div class="li-logo">
-                            <img src="../public/logo.png" alt="">
+                            <img src="logo.png" alt="">
                         </div>
 
                         <div class="li-book-name">
@@ -85,7 +85,7 @@
                 <div class="list-item-container">
                     <div class="list-item">
                         <div class="li-logo">
-                            <img src="../public/logo.png" alt="">
+                            <img src="logo.png" alt="">
                         </div>
 
                         <div class="li-book-name">
@@ -100,7 +100,7 @@
                 <div class="list-item-container">
                     <div class="list-item">
                         <div class="li-logo">
-                            <img src="../public/logo.png" alt="">
+                            <img src="logo.png" alt="">
                         </div>
 
                         <div class="li-book-name">
@@ -115,7 +115,7 @@
                 <div class="list-item-container">
                     <div class="list-item">
                         <div class="li-logo">
-                            <img src="../public/logo.png" alt="">
+                            <img src="logo.png" alt="">
                         </div>
 
                         <div class="li-book-name">
@@ -130,7 +130,7 @@
                 <div class="list-item-container">
                     <div class="list-item">
                         <div class="li-logo">
-                            <img src="../public/logo.png" alt="">
+                            <img src="logo.png" alt="">
                         </div>
 
                         <div class="li-book-name">
