--- a/src/assets/pages/index.pug
+++ b/src/assets/pages/index.pug
@@ -10,23 +10,23 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;900&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="../css/register.css">
+    <link rel="stylesheet" href="register.css">
     <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="../public/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../public/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../public/favicon-16x16.png">
-    <link rel="manifest" href="../public/site.webmanifest">
-    <link rel="mask-icon" href="../public/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="manifest" href="site.webmanifest">
+    <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
     <div class="container">
-        <img src="public/wallpaper.png" class="bg" alt="wallpaper">
+        <img src="wallpaper.png" class="bg" alt="wallpaper">
         <h1 class="project-title">Excel Clone</h1>
         <div class="register-container">
-            <img src="public/user.png" width="90px" height="90px" alt="user">
+            <img src="user.png" width="90px" height="90px" alt="user">
             <h1 class="sign-in-to-continue">Sign In To Continue</h1>
             <input type="email" class="input-box" placeholder="Your Email">
             <input type="password" class="input-box" placeholder="Your Password">
@@ -34,7 +34,7 @@
             <hr>
             <p class="or">OR</p>
             <div class="button google-btn">
-                <img src="public/google.png" width="24px" height="24px" alt="google_icon" class="google-icon">
+                <img src="google.png" width="24px" height="24px" alt="google_icon" class="google-icon">
                 <p class="continue-with-google">Continue with Google<p>
             </div>
         </div>
