Adding login page

--- a/src/assets/pages/register.pug
+++ b/src/assets/pages/register.pug
@@ -27,16 +27,18 @@
         <h1 class="project-title">Excel Clone</h1>
         <div class="register-container">
             <img src="user.png" width="90px" height="90px" alt="user">
-            <h1 class="sign-in-to-continue">Sign In To Continue</h1>
-            <input type="email" class="input-box" placeholder="Your Email">
-            <input type="password" class="input-box" placeholder="Your Password">
-            <div class="button signin-btn">Sign In</div>
+            <h1 class="sign-in-to-continue">Create Your Account</h1>
+            <input type="text" class="input-box" placeholder="Your Name" required>
+            <input type="email" class="input-box" placeholder="Your Email" required>
+            <input type="password" class="input-box" placeholder="Your Password" required>
+            <div class="button signin-btn">Register</div>
             <hr>
             <p class="or">OR</p>
             <div class="button google-btn">
                 <img src="google.png" width="24px" height="24px" alt="google_icon" class="google-icon">
                 <p class="continue-with-google">Continue with Google<p>
             </div>
+            <p>Already have an account?&nbsp<a style="color:#68b62b" href="/">Login</a></p>
         </div>
     </div>
 </body>
