Adding login script, making email:unique in register route, adding name field to user schema

--- a/src/assets/pages/login.pug
+++ b/src/assets/pages/login.pug
@@ -28,9 +28,9 @@
         <div class="register-container">
             <img src="user.png" width="90px" height="90px" alt="user">
             <h1 class="sign-in-to-continue">Login To Continue</h1>
-            <input type="email" class="input-box" placeholder="Your Email" required>
-            <input type="password" class="input-box" placeholder="Your Password" required>
-            <div class="button signin-btn">Login</div>
+            <input id="user-email" type="email" class="input-box" placeholder="Your Email">
+            <input id="user-password" type="password" class="input-box" placeholder="Your Password">
+            <div id="login-btn" class="button signin-btn">Login</div>
             <hr>
             <p class="or">OR</p>
             <div class="button google-btn">
@@ -40,6 +40,7 @@
             <p>Don't have an account?&nbsp<a style="color:#68b62b" href="/register">Register</a></p>
         </div>
     </div>
+    <script src="login.js"></script>
 </body>
 
 </html>
