--- a/src/assets/static/dashboard.css
+++ b/src/assets/static/dashboard.css
@@ -31,7 +31,7 @@ body {
 }
 
 .project-title-container {
-  width: calc(100% - 130px);
+  width: calc(100% - 200px);
   display: flex;
   align-items: center;
 }
@@ -57,6 +57,25 @@ body {
   border: 1px solid white;
   padding: 4px;
   border-radius: 50%;
+}
+
+.logout {
+  padding-left: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.logout:hover {
+  cursor: pointer;
+  transform: scale(1.1);
+}
+
+.logout-btn {
+  color: #fff;
+  border: 1px solid white;
+  border-radius: 5px;
+  padding: 4px;
 }
 
 .book-container {
